--- a/style.css
+++ b/style.css
@@ -75,14 +75,21 @@ body{
         text-decoration: line-through;
      }
 
-    .button{
-        margin-top: -2em;
-        margin-left: 10px;
-        width: 70%;
-        padding: 10px;
-        border-radius: 8px;
-        background-color: hsl(158, 36%, 37%);
-        align-items: center;
+      .btn{
+            background-color: hsl(158, 36%, 37%);
+            border: none;
+            border-radius: 8px;
+            width: 100%;
+            padding: 15px 0px;
+            margin-top: -20em;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+            font-weight: 700;
+            font-family: 'Montserrat', sans-serif;
+    
+
+
 
     }
     
