--- a/style.css
+++ b/style.css
@@ -111,17 +111,26 @@ body{
   }  
   .image{
     background-image: url(./images/image-product-mobile.jpg);
-    width: 20em;
+    width: 100%;
+    height: 88vh;
     background-position: top center;
+    border-radius:12px 12px 0 0;
   
     
     
   }
 .textcontainer{
   width: 8em;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border-radius: 0 0 12px 12px;
+  height: auto;
+  margin-left: 5px;
+  margin-right: 6px;
 }
 .btn{
-
+    margin-right: 10px;
+    width: 90%;
 }
 }
 
